--- a/gridview/pubspec.yaml
+++ b/gridview/pubspec.yaml
@@ -29,6 +29,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   infinite_widgets: ^1.0.1
+  http: ^0.12.2
+  velocity_x: ^1.3.1
 
 dev_dependencies:
   flutter_test:
