--- a/gridview/pubspec.yaml
+++ b/gridview/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   infinite_widgets: ^1.0.1
   http: ^0.12.2
   velocity_x: ^1.3.1
+  font_awesome_flutter: ^8.11.0
 
 dev_dependencies:
   flutter_test:
