--- a/profilepage/pubspec.yaml
+++ b/profilepage/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   font_awesome_flutter: ^8.11.0
+  image_picker: ^0.6.7+22
 
 dev_dependencies:
   flutter_test:
